<resources>
    <string name="app_name">loginuni</string>
    <string name="signin">signin</string>
    <string name="selectAll">Select All</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="id">id</string>
    <string name="username">username</string>
    <string name="password">password</string>
</resources>